--- a/css/layout-style.css
+++ b/css/layout-style.css
@@ -1,1 +1,38 @@
-
+   
+    border: 1px solid green;
+    }
+    
+    .footer {
+    width: 100%;
+    height: 50px;
+    border: 1px solid red;
+    }
+    
+    .clearfloat {
+    clear: both;
+    }
+    
+    .main {
+    height: 350px;
+    margin: 0px auto;
+    }
+    
+    .floatleft {
+    float: left;
+    }
+    
+    .floatright {
+    float: right;
+    }
+    body {
+      background-image: url('images/tile_texture.jpg');
+      background-color: gray;
+      }
+      a:link { color: blue;
+    font-weight: bold;}
+ a:visited { color: green; }
+ a:hover { color: orange;
+      text-decoration: none;}
+ a:active { color: red; }
+      
+      /* Colin is a little friend */
